# ingestion

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Makefile  NOTICE  README.md  build.sh  diff.sh
airflow-apis/: README.md  pyproject.toml
airflow-apis/examples/: test_connection.json
airflow-apis/metadata_managed_apis/: plugin.py
airflow-apis/metadata_managed_apis/api/: apis_metadata.py  app.py  config.py  error_handlers.py  response.py  utils.py
airflow-apis/metadata_managed_apis/api/routes/: delete.py  deploy.py  disable.py  enable.py  health.py  health_auth.py  ip.py  kill.py  last_dag_logs.py  run_automation.py  status.py  trigger.py
airflow-apis/metadata_managed_apis/operations/: delete.py  deploy.py  health.py  kill_all.py  last_dag_logs.py  state.py  status.py  trigger.py
airflow-apis/metadata_managed_apis/resources/: dag_runner.j2
airflow-apis/metadata_managed_apis/utils/: logger.py  parser.py
airflow-apis/metadata_managed_apis/views/: rest_api.py
airflow-apis/metadata_managed_apis/workflows/: config.py  workflow_builder.py  workflow_factory.py
airflow-apis/metadata_managed_apis/workflows/ingestion/: application.py  common.py  data_insight.py  dbt.py  elasticsearch_sink.py  es_reindex.py  lineage.py  metadata.py  profiler.py  registry.py  test_suite.py  usage.py
airflow-apis/openmetadata_managed_apis/api/routes/: health.py
airflow-apis/openmetadata_managed_apis/workflows/ingestion/: registry.py
airflow-apis/tests/integration/operations/: test_airflow_ops.py
airflow-apis/tests/unit/: test_helpers.py
ingestion/: Dockerfile  (+6 more)
(+1490 files in other folders)
